# neural-network

./: CMakeLists.txt  README.md  build_windows.bat
doc/: Report.docx
include/: hidden_layer.h  layer.h  network.h  neuron.h  output_layer.h  utils.h
src/: hidden_layer.cpp  layer.cpp  main.cpp  network.cpp  neuron.cpp  output_layer.cpp  utils.cpp
